# emu_8086

./: 404.html  Cargo.toml  LICENCE  README.md  TODO.md  blog.html  index.html  markdown-page.html  package-lock.json  package.json  sitemap.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: consts.rs  main.rs  memory.rs  utils.rs
src-tauri/src/compiler/: compilation_error.rs  compilation_utils.rs  lexer.rs  mod.rs  suggestions.rs  suggestions_utils.rs  tests.rs  tokenized_line.rs  types_structs.rs  utils.rs
src-tauri/src/compiler/parsers/: adc.rs  add.rs  and.rs  call.rs  cmp.rs  dec.rs  directives.rs  div.rs  in_ins.rs  inc.rs  ja.rs  jmp.rs  lea.rs  les.rs  loop_ins.rs  mod.rs  mov.rs  mul.rs  or.rs  out_ins.rs  pop.rs  push.rs  sbb.rs  shl.rs  sub.rs  test_ins.rs  utils.rs  var.rs  xchg.rs  xor.rs
src-tauri/src/compiler/parsers/pattern_extractors/: compile_first_ins_reg_pattern.rs  compile_tow_args_whole_ins.rs  compile_two_arguments_patterns.rs  mod.rs  offset_label_pattern.rs  reg_mem_pattern.rs  utils.rs
src-tauri/src/compiler/tokens/: assembler_directives.rs  data.rs  indexed_addressing_types.rs  instructions.rs  mod.rs  registers16bit.rs  registers8bit.rs
src-tauri/src/cpu/: interrupt.rs  mod.rs  ports_handler.rs  utils.rs
src-tauri/src/cpu/instructions/: adc.rs  and.rs  call.rs  cmp.rs  div.rs  idiv.rs  in_compilation.rs  iret.rs  lea.rs  les.rs  loop_ins.rs  mod.rs  or.rs  out_ins.rs  pop.rs  push.rs  ret.rs  sbb.rs  test_ins.rs  test_macro.rs  utils.rs  xchg.rs  xor.rs
src-tauri/src/cpu/instructions/add/: direct_addressing.rs  mod.rs  (+3 more)
(+723 files in other folders)
